# spork

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  setup.sh
specs/001-build-a-utility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-utility/contracts/: cli-contract.md  git-operations-contract.md
spork/: __init__.py  __main__.py  claude.py  cli.py  data_models.py  env_files.py  git_operations.py  validators.py  worktree.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_claude.py  test_data_models.py  test_env_files.py  test_git_operations.py  test_validators.py  test_worktree.py
